syntax = "proto3";

package tari.comms.identity;

message PeerIdentityMsg {
    bytes node_id = 1;
    repeated string addresses = 2;
    uint64 features = 3;
    repeated bytes supported_protocols = 4;
    string user_agent = 5;
}
